force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Cuando un alquiler se completa guarda el registro que indica si la factura se genero con exito y si se envio al cliente, y en caso de no ser asi guarda la descripcion del error que haya sucedido</description>
    <label>Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>