force-app/main/default/objects/Log__c/fields/VRT_LKP_Rent__c.field-meta.xml
<CustomField>
    <fullName>VRT_LKP_Rent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Alquiler con el que esta relacionado  el log</description>
    <label>Alquiler</label>
    <referenceTo>VRT_Rental__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>