force-app/main/default/objects/Log__c/fields/VRT_SEL_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_Event_Type__c</fullName>
    <description>Descrive el tipo de Update, Creacion del registro, o diferentes updates.</description>
    <label>Tipo de Evento</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creación del Registro</fullName>
            </value>
            <value>
                <fullName>Alquiler Completado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>