force-app/main/default/objects/Log__c/fields/VRT_SEL_Result__c.field-meta.xml
<CustomField>
    <fullName>VRT_SEL_Result__c</fullName>
    <description>Nos dice si el evento ha sido exitoso o no.</description>
    <label>Resultado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exito</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>