force-app/main/default/objects/Log__c/fields/VRT_TXT_Description__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_Description__c</fullName>
    <description>Breve descripción del evento</description>
    <label>Descripcion</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>